<resources>
    <string name="app_name">RewardBingo</string>
    <string name="appTitle">REWARD BINGO</string>
    <string name="new_chart">New Chart</string>
    <string name="view_charts">View Charts</string>
    <string name="network_is_broken">Sorry, no internet found, some functionality will be disabled.</string>
    <string name="user_to_track">Which user to track?</string>
    <string-array name="tasks_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="title_activity_chart_view">View Chart</string>
    <string name="title_activity_new_chart">New Chart</string>
    <string name="action_settings">Settings</string>
    <string name="chart_week_days">M | Tu | W | Th | F | Sa | Su</string>
    <string name="task_list_numerical">1.\n2.\n3.\n4.\n5.</string>
    <string name="title_activity_archive_view">Chart History</string>
    <string name="history_title">USER | CHART | TOTAL</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="content_save_button">Save Chart</string>
    <string name="content_complete_button">Complete and archive chart</string>
    <string name="content_new_chart">Create new chart</string>
    <string name="content_view_chart">View active chart</string>
    <string name="content_history">View history</string>
    <string name="content_task_spinner">Select number of tasks</string>
    <string name="content_edit_user">Type user to track</string>
    <string name="content_save_tasks">Save tasks to chart</string>
    <string name="content_clear_button">Clear current chart</string>
    <string name="content_create_button">Create chart</string>
    <string name="content_random_button">Fetch random tasks</string>
    <string name="placeholder_day">Mon</string>
    <string name="placeholder_name">Al Pacino</string>
    <string name="placeholder_name2">Donald</string>
    <string name="new_chart_tasks">Tasks</string>
    <string name="placeholder_example_task">1. Washed dishes</string>
    <string name="placeholder_example_date">12-12-12</string>
    <string name="chart_text_done">Done?</string>
    <string name="placeholder_score">1/50</string>
    <string name="button_text_save">SAVE</string>
    <string name="chart_title_user">User</string>
    <string name="button_text_compelte">COMPLETE</string>
    <string name="button_text_history">HISTORY</string>
    <string name="button_text_random">RANDOM</string>
    <string name="button_text_create">CREATE</string>
    <string name="button_text_clear">CLEAR</string>
</resources>
