<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_chart_tasks"
            android:id="@+id/tasksTextView"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/button_small_text_size"
            android:background="@drawable/border_light"
            android:padding="@dimen/border_padding_regular"/>

        <Spinner
            android:id="@+id/taskSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:contentDescription="@string/content_task_spinner"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_title_user"
            android:id="@+id/userTextView"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/button_small_text_size"
            android:background="@drawable/border_light"
            android:padding="@dimen/border_padding_regular"/>

        <!--Dummy item to prevent EditText from gaining focus-->
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/userEditText"
            android:layout_weight="1"
            android:text=""
            android:hint="@string/user_to_track"
            android:contentDescription="@string/content_edit_user"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="invisible"
            android:layout_gravity="center"/>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taskListView"
            android:layout_gravity="center_horizontal|top"/>
    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:gravity="center"
            >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_random"
            android:id="@+id/buttonRandom"
            android:padding="@dimen/border_padding_regular"
            android:textSize="@dimen/button_small_text_size"
            android:textColor="@color/textSecondary"
            android:background="@drawable/border_dark"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:contentDescription="@string/content_random_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_create"
            android:id="@+id/buttonCreate"
            android:padding="@dimen/border_padding_regular"
            android:textSize="@dimen/button_small_text_size"
            android:textColor="@color/textSecondary"
            android:background="@drawable/border_dark"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:contentDescription="@string/content_create_button"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text_clear"
                android:id="@+id/buttonClear"
                android:padding="@dimen/border_padding_regular"
                android:textSize="@dimen/button_small_text_size"
                android:textColor="@color/textSecondary"
                android:background="@drawable/border_dark"
                android:layout_margin="2dp"
                android:contentDescription="@string/content_clear_button"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text_save"
                android:id="@+id/buttonSave"
                android:padding="@dimen/border_padding_regular"
                android:textSize="@dimen/button_small_text_size"
                android:textColor="@color/textSecondary"
                android:background="@drawable/border_dark"
                android:layout_margin="2dp"
                android:contentDescription="@string/content_save_tasks"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>