<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appTitle"
        android:textColor="@color/textPrimary"
        android:id="@+id/logoTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/button_large_text_size"
        android:background="@drawable/border_light"
        android:padding="@dimen/border_padding_regular"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/logoTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_star"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_chart"
            android:textColor="@color/textSecondary"
            android:id="@+id/newChartTextView"
            android:textSize="@dimen/button_large_text_size"
            android:background="@drawable/border_dark"
            android:padding="@dimen/border_padding_regular"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/logoTextView"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_charts"
            android:id="@+id/viewChartTextView"
            android:textSize="@dimen/button_large_text_size"
            android:textColor="@color/textSecondary"
            android:background="@drawable/border_dark"
            android:padding="@dimen/border_padding_regular"
            android:layout_below="@id/newChartTextView"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HISTORY"
            android:id="@+id/archiveButton"
            android:padding="@dimen/border_padding_regular"
            android:textSize="@dimen/button_small_text_size"
            android:textColor="@color/textSecondary"
            android:background="@drawable/border_dark"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    </LinearLayout>

</RelativeLayout>
